# CS205_C_CPP

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CS205_C_CPP.sln  CS205_C_CPP.vcxproj  CS205_C_CPP.vcxproj.filters  Cargo.toml  README.md  catch_main.cpp
.github/: CONTRIBUTING.md  pull_request_template.md
2020fall/: CMakeLists.txt
2020fall/ass1/: CMakeLists.txt  README.md
2020fall/ass1/include/: CMakeLists.txt  big_int.hpp  big_int_impl.hpp
2020fall/ass1/src/: CMakeLists.txt  big_int.cpp  big_int_impl.cpp
2020fall/ass1/test/: CMakeLists.txt  big_int_impl_test.cpp  big_int_test.cpp
Assignment_1/: CMakeLists.txt  README.md  assignment_1.cpp  report_01_c.md  report_01_e.md  test_assignment_1.cpp
Assignment_1/src/: CMakeLists.txt  assignment_1.cpp  assignment_1_main.cpp  test_assignment_1.cpp
Assignment_2/: .gitignore  Assignment_2.cpp  CMakeLists.txt  README.md  city.hpp  test_assignment_2.cpp
Assignment_3/: CMakeLists.txt  README.md  test_3_03.sh  using_utf8_to_codepoint.c
Assignment_3/lib/: CMakeLists.txt
Assignment_3/src/: Ass3_report_e.md  Assignment_3_01.cpp  Assignment_3_02.cpp  Assignment_3_03.cpp  CMakeLists.txt  README.md  test_3_03.sh  test_assignment_3.cpp  utf8.c  utf8.h  utf8_to_codepoint_example.cpp
Assignment_4/: .gitignore  CMakeLists.txt  README.md
Assignment_4/src/: Ass4_report_e.md  Assignment_4_01.cpp  Assignment_4_02.cpp  Assignment_4_03.cpp  Assignment_4_04.cpp  Assignment_4_05.cpp  CMakeLists.txt  README.md
Assignment_5/: CMakeLists.txt  README.md
Assignment_5/src/: CMakeLists.txt  UTF8string.cpp  UTF8string.hpp  test_catch_UTF8_String.cpp  utf8.c  utf8.h
Assignment_5/test/: CMakeLists.txt  test_catch_UTF8_String.cpp
cmake/: cross_platform.cmake  include.cmake
include/: CMakeLists.txt
lab01/: README.md  smile.cpp
lab02/: README.md  lab02_01.cpp  lab02_02.cpp  lab02_03.cpp
lab02/exercise/: CMakeLists.txt  README.md  lab02_01.cpp  lab02_02.cpp  lab02_03.cpp  test_lab02.cpp
lab03/: CandyBar.h  README.md  lab03_01.cpp  lab03_02.cpp  lab03_03.cpp  lab03_report.md  test_lab03.cpp
lab03/exercise/: CMakeLists.txt  CandyBar.h  README.md  lab03_01.cpp  lab03_02.cpp  lab03_03.cpp  test_lab03.cpp
lab03/src/: CMakeLists.txt  CandyBar.h  lab03_02.cpp  lab03_03.cpp  test_lab03.cpp
lab04/: CandyBar.hpp  README.md  lab04_01.cpp  lab04_02.cpp  lab04_03.cpp  lab04_report.md  pizza.hpp  test_lab04.cpp
lab04/exercise/: CMakeLists.txt  README.md  lab04_01.cpp  lab04_02.cpp  lab04_03.cpp  pizza.hpp  test_lab04.cpp
lab04/exercise/lib/: CMakeLists.txt
lab04/src/: CMakeLists.txt  CandyBar.hpp  lab04_01.cpp  lab04_02.cpp  lab04_03.cpp
lab05/: README.md  lab05_01.cpp  lab05_02.cpp  lab05_03.cpp  lab05_04.cpp  test_lab05.cpp
lab05/src/: CMakeLists.txt  lab05_03.cpp  lab05_04.cpp  test_lab05.cpp
lab06/examples/: CMakeLists.txt  if_else_if_statement.cpp  if_else_statement.cpp  logical_expression.cpp  nested_if_statement.cpp  switch_case.cpp
lab06/exercise/: CMakeLists.txt  README.md  lab06_01.cpp  lab06_02.cpp  lab06_03.cpp  read_books.cpp
lab06/exercise/include/: Book.h
lab06/exercise/lib/: Book.cpp  Book.hpp  CMakeLists.txt
lab06/exercise/src/: Book.cpp  lab06_01.cpp  lab06_02.cpp  lab06_03.cpp  read_books.cpp
lab08/exercise/: CMakeLists.txt  lab08_01.cpp  lab08_02.cpp
lab09/exercise/: CMakeLists.txt  CandyBar.h  README.md  candybar.cpp  fun.cpp  fun.h  main.cpp  main2.cpp
lab10/examples/: CMakeLists.txt  detect_circles.cpp  detect_face.cpp  line_detection.cpp  main.cpp
lab10/examples/cascades/: .gitignore
lab10/examples/pictures/: .gitignore
lab11/exercise/: CMakeLists.txt  CandyBar.cpp  CandyBar.h  README.md  Rectangle.cpp  Rectangle.h  lab11_01.cpp  lab11_02.cpp
lab11/exercise/lib/: CMakeLists.txt  candy_bar.cpp  candy_bar.h  rectangle.cpp  rectangle.h  rectangle_.cpp  rectangle_.h
lab12/code_example/: CMakeLists.txt  Complex0.cpp  Complex1.cpp  Complex2.h  useComplex1.cpp
lab12/examples/: CMakeLists.txt  Complex1.h  Complex2.cpp  Complex3.cpp  Complex3.h  Complex4.cpp  Complex4.h  complex0_.cpp  complex0_.h  complex1_.cpp  complex2_.cpp  complex3_.cpp  complex4_.cpp  useComplex0.cpp  useComplex2.cpp  useComplex3.cpp  useComplex4.cpp  use_complex0.cpp  use_complex1.cpp  use_complex2.cpp  use_complex3.cpp  use_complex4.cpp
lab12/exercise/: CMakeLists.txt  Complex.h  README.md  lab12_01.cpp  lab12_02.cpp
lab12/exercise/lib/: CMakeLists.txt  Complex.cpp  Number.cpp  complex.cpp  complex_.cpp  number.cpp  number.h  number_.cpp
lab13/code_example/: CMakeLists.txt
lab13/code_example/code1/: Circle.cpp  Circle.h  Rectangle.cpp  main1.cpp
lab13/code_example/code2/: Circle.cpp  Shape.h
lab13/code_example/code3/: Rectangle.cpp  Shape.cpp
lab13/examples/: CMakeLists.txt
lab13/examples/code1/: Rectangle.h  circle.cpp  circle.h  circle_.cpp  circle_.h  main1.cpp  rectangle.cpp  rectangle.h  rectangle_.cpp  rectangle_.h
lab13/examples/code2/: Circle.h  Rectangle.cpp  Rectangle.h  Shape.cpp  circle.cpp  circle.h  circle_.cpp  circle_.h  main2.cpp  rectangle.cpp  rectangle.h  rectangle_.cpp  rectangle_.h  shape.cpp  shape.h  shape_.cpp  shape_.h
lab13/examples/code3/: Circle.cpp  Circle.h  Rectangle.h  Shape.cpp  Shape.h  circle.cpp  circle.h  circle_.cpp  circle_.h  main3.cpp  rectangle.cpp  rectangle.h  rectangle_.cpp  rectangle_.h  shape.cpp  shape.h  shape_.cpp  shape_.h
lab13/exercise/: CCube_lab13_02.cpp  CCube_lab13_02.h  CMakeLists.txt  CSphere_lab13_03.cpp  CSphere_lab13_03.h  CStereoShape_lab13_01.h  README.md  lab13_01.cpp  lab13_02.cpp  lab13_04.cpp
lab13/exercise/lib/: CCube_lab13_02.cpp  CCube_lab13_02.h  CMakeLists.txt  CSphere_lab13_03.cpp  CSphere_lab13_03.h  CStereoShape_lab13_01.cpp  CStereoShape_lab13_01.h  c_cube_lab13_02.cpp  c_cube_lab13_02.h  c_sphere_lab13_03.cpp  c_sphere_lab13_03.h  c_stereoShape_lab13_01.cpp  c_stereoShape_lab13_01.h
midterm/: CMakeLists.txt  README.md  question1.cpp  question2.cpp  question4.cpp
midterm/2021Spring/: CMakeLists.txt  README.md  question1.cpp  question2.cpp  question3.cpp  question4.cpp  question5.cpp  question_test.cpp
(+191 files in other folders)
