cmake_minimum_required(VERSION 3.10.2)
project(Assignment_4 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")

add_executable(${PROJECT_NAME}
        #./Assignment_4_01.cpp
        #./Assignment_4_02.cpp
        #./Assignment_4_03.cpp
        #./Assignment_4_04.cpp
        ./Assignment_4_05.cpp
        )
