cmake_minimum_required(VERSION 3.10.2)
project(Assignment_4 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")

add_executable(${PROJECT_NAME}_01 ./Assignment_4_01.cpp)
add_executable(${PROJECT_NAME}_02 ./Assignment_4_02.cpp)
add_executable(${PROJECT_NAME}_03 ./Assignment_4_03.cpp)
add_executable(${PROJECT_NAME}_04 ./Assignment_4_04.cpp)
add_executable(${PROJECT_NAME}_05 ./Assignment_4_05.cpp)
