cmake_minimum_required(VERSION 3.10)
project(lab04)
set(CMAKE_CXX_STANDARD 14)

# add_executable(${PROJECT_NAME} test_lab04.cpp)
# add_executable(${PROJECT_NAME}  lab04_01.cpp)
# add_executable(${PROJECT_NAME}  lab04_02.cpp)
add_executable(${PROJECT_NAME} lab04_03.cpp)

# target_link_libraries(lab04)