cmake_minimum_required(VERSION 3.10)
project(lab05)
set(CMAKE_CXX_STANDARD 14)

# add_executable(${PROJECT_NAME} test_lab05.cpp)
# add_executable(${PROJECT_NAME}  lab05_01.cpp)
# add_executable(${PROJECT_NAME}  lab05_02.cpp)
add_executable(${PROJECT_NAME} lab05_03.cpp)
# add_executable(${PROJECT_NAME}  lab05_04.cpp)

# target_link_libraries(lab05)